--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
     </div>
   </div>
 
-  <button id="start">Start new game!</button>
+  <div>
+    <select id="select-level">
+      <option value="1">Level 1</option>
+      <option value="2">Level 2</option>
+      <option value="3">Level 3</option>
+    </select>
+    <button id="start">Start new game!</button>
+  </div>
 
   <script src="app.js"></script>
 
