--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <div>
+  <div id="start-level">
     <select id="select-level">
       <option value="1">Level 1</option>
       <option value="2">Level 2</option>
